// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`2. article summary with opinion byline 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleBylineOpinion
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
      isOpinionByline={true}
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
</div>
`;

exports[`3. article summary component with multiple paragraphs 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph 1.
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
       
      Test paragraph 2
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`4. article summary component with content including line breaks 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      <b>
        Review 1
      </b>
      <br />
       ITV
      <br />
      ★★★★☆
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
       
      <b>
        Review 2
      </b>
      <br />
       BBC Two
      <br />
      ★★★☆☆
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
       
      Test paragraph
      ...
    </span>
  </div>
</div>
`;

exports[`5. article summary component containing links 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
      >
        Sajid Javid
      </span>
       has warned the Home Office to expect an overhaul after the 
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
      >
        Windrush scandal
      </span>
       as he ditches the policy of creating a “hostile
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
</div>
`;

exports[`6. article summary component with headline and no content 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </div>
</div>
`;

exports[`7. article summary component with empty content at the end trimmed 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph 1.
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
       
      Test paragraph 2
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
       
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`8. article summary component with no byline 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
</div>
`;

exports[`9. article summary component with no label 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`10. article summary component with no headline 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </div>
</div>
`;

exports[`11. article summary component with no date publication 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`12. article summary component with a video label 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <VideoLabel
      color="#333333"
      isVideo={true}
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`13. article summary component with a strapline 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55"
    role="heading"
  >
    Test Headline
  </h3>
  <h4
    aria-level="4"
    className="css-reset-4rbku5 css-text-901oao r-color-1khp51w r-fontFamily-4h8ur4 r-fontSize-1b6yd1w r-lineHeight-10yl4k r-paddingBottom-1mi0q7o"
    role="heading"
  >
    Test Strapline
  </h4>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "camilla-long",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Camilla Long",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Environment Editor",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`14. article summary content component without an ast to render null 1`] = `null`;
